@@ -1,23 +1,26 @@
 package hwr.oop.doppelkopf.group6.cli;
 
 import hwr.oop.doppelkopf.group6.Player;
-import hwr.oop.doppelkopf.group6.persistenz.SaveToFile;
+import hwr.oop.doppelkopf.group6.persistence.SaveToFile;
 import java.io.*;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
 public class CreateCommand implements Command {
+  private final PrintStream out;
   private final IOExceptionBomb ioExceptionBomb;
-  ParseCommand parse = new ParseCommand();
   private String gameID;
+  public final ParseCommand parse;
   String fileName = "doppelkopf.csv";
   Path currentRelativePath = Paths.get("");
   String currentDir = currentRelativePath.toAbsolutePath().toString();
   File file = new File(currentDir + File.separator + fileName);
 
-  public CreateCommand(IOExceptionBomb ioExceptionBomb) {
+  public CreateCommand(OutputStream out, IOExceptionBomb ioExceptionBomb) {
+    this.out = new PrintStream(out);
     this.ioExceptionBomb = ioExceptionBomb;
+    this.parse = new ParseCommand(out);
   }
 
   @Override
@@ -34,13 +37,13 @@ public class CreateCommand implements Command {
         createGame(args);
       }
     } catch (IOException e) {
-      System.err.println("IOException aufgetreten: " + e.getMessage());
+      out.println("IOException aufgetreten: " + e.getMessage());
     }
   }
 
   private void createFile() throws IOException {
     if (file.createNewFile()) {
-      System.out.println("Die Datei wird erstellt...");
+      out.println("Die Datei wird erstellt...");
     }
   }
 
@@ -51,7 +54,7 @@ public class CreateCommand implements Command {
       String line;
       while ((line = bufferedReader.readLine()) != null) {
         List<String> columns = List.of(line.split(","));
-        if (!columns.isEmpty() && columns.getFirst().equals(this.gameID)) {
+        if (!columns.isEmpty() && columns.get(0).equals(this.gameID)) {
           throw new IOException("Das Spiel existiert bereits! Probiere eine andere Spiel ID.");
         }
       }
@@ -59,7 +62,7 @@ public class CreateCommand implements Command {
       SaveToFile save = new SaveToFile();
       save.players(players, this.gameID);
 
-      System.out.println("Spiel " + this.gameID + " wird erstellt...");
+      out.println("Spiel " + this.gameID + " wird erstellt...");
     }
   }
 }
